--- a/components/db_reader/Dockerfile
+++ b/components/db_reader/Dockerfile
@@ -10,6 +10,7 @@ COPY shared/        ./shared/
 # service-specific code
 COPY components/db_reader/     ./components/db_reader/
 
+# install dependencies
 RUN pip install --no-cache-dir -r components/db_reader/requirements.txt
 
 CMD ["python", "-m", "components.db_reader.main"]
