--- a/docker/environments/docker-compose.dev.yml
+++ b/docker/environments/docker-compose.dev.yml
@@ -1,33 +1,28 @@
 services:
   crawler_noproxy:
     extends:
-      # TODO: investicate why this path instead of ../
       file: ./docker-compose.yml
       service: crawler_noproxy
-    build:
-      args:
-        APP_ENV: dev # Pass 'dev' to the Dockerfile
+    environment:
+      - APP_ENV=dev
 
   parser:
     extends:
       file: ./docker-compose.yml
       service: parser
-    build:
-      args:
-        APP_ENV: dev
+    environment:
+      - APP_ENV=dev
 
   scheduler:
     extends:
       file: ./docker-compose.yml
       service: scheduler
-    build:
-      args:
-        APP_ENV: dev
+    environment:
+      - APP_ENV=dev
 
   dispatcher:
     extends:
       file: ./docker-compose.yml
       service: dispatcher
-    build:
-      args:
-        APP_ENV: dev
+    environment:
+      - APP_ENV=dev
