--- a/shared/configs/global_config.yml
+++ b/shared/configs/global_config.yml
@@ -1,15 +1,18 @@
 redis:
   host: redis
+  # host: 192.168.86.15
   port: 6379
   db_seen: 0
   decode_responses: true
 
 postgres:
   host: postgres
+  # host: 192.168.86.15
   port: 5432
 
 rabbitmq:
   host: rabbitmq
+  # host: 192.168.86.15
   port: 5672
 
 # http headers
