--- a/components/crawler/configs/crawler_dev.yml
+++ b/components/crawler/configs/crawler_dev.yml
@@ -10,12 +10,20 @@ rate_limit:
   period_in_seconds: 1
 
 requests:
+  retry_attempts: 1
+  retry_grace_period_seconds: 2
   timeout_in_seconds: 10
   headers:
     accept: text/html
     accept-language: en-US
     user-agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/137.0.0.0 Safari/537.36
 
+# How many times the crawler should retry to download the compressed html
+download_retry_attempts: 1
+
+download_retry_grace_period_seconds: 2
+
+# How much time until pages are allowed to be recrawled
 recrawl_interval: 691200 # 8 days in seconds
 
 storage_path: /data/html
