--- a/components/crawler/configs/crawler_prod.yml
+++ b/components/crawler/configs/crawler_prod.yml
@@ -6,7 +6,14 @@ logging:
 
 rate_limit:
   max_requests_per_sec: 1
+  period_in_seconds: 1
 
+# How many times the crawler should retry to download the compressed html
+download_retry_attempts: 1
+
+download_retry_grace_period_seconds: 2
+
+# How much time until pages are allowed to be recrawled
 recrawl_interval: 691200 # 8 days in seconds
 
 headers:
