--- a/components/crawler/configs/crawler_prod.yml
+++ b/components/crawler/configs/crawler_prod.yml
@@ -4,22 +4,26 @@ logging:
   log_level: INFO
   logger_name: Crawler
 
+
 rate_limit:
-  max_requests_per_sec: 1
+  max_requests_per_period: 1
   period_in_seconds: 1
 
-# How many times the crawler should retry to download the compressed html
-download_retry_attempts: 1
+requests:
+  retry_attempts: 2
+  retry_grace_period_seconds: 2
+  timeout_in_seconds: 10
+  headers:
+    accept: text/html
+    accept-language: en-US
+    user-agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/137.0.0.0 Safari/537.36
 
-download_retry_grace_period_seconds: 2
+# How many times the crawler should retry to download the compressed html
+download_retry:
+  attempts: 2
+  grace_period_seconds: 2
 
 # How much time until pages are allowed to be recrawled
-recrawl_interval: 691200 # 8 days in seconds
+recrawl_interval: 691200 # 8 days = 691200 seconds
 
-headers:
-  accept: text/html
-  accept-language: en-US
-  user-agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/137.0.0.0 Safari/537.36
-
-# ${DL_HTML_PATH} is an env variable that has to be set (config loader does this)
 storage_path: /data/html
