git workflow update

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,22 @@ jobs:
 
   unit-test:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:14
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: test_db
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     env:
       RABBITMQ_USER: ${{ secrets.RABBITMQ_USER }}
       RABBITMQ_PASSWORD: ${{ secrets.RABBITMQ_PASSWORD }}
@@ -66,5 +82,7 @@ jobs:
           done
 
       - name: Run test suite
-        run: DATABASE_URL=postgresql://user:password@host:port/dbname PYTHONPATH=${{ github.workspace }} pytest -m "not integration" tests/
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
+        run: PYTHONPATH=${{ github.workspace }} pytest -m "not integration" tests/
         
