Dispatcher: minor refactored the db_client and added docstrings

--- a/components/dispatcher/configs/dispatcher_dev.yml
+++ b/components/dispatcher/configs/dispatcher_dev.yml
@@ -5,8 +5,10 @@ logging:
 
 dispatch_count: 1
 
-seed_urls:
-  - https://en.wikipedia.org/wiki/Computer_science
-
 # seconds between each dispatch
 dispatch_tick: 1
+
+db_reader_timeout_seconds: 10
+
+seed_urls:
+  - https://en.wikipedia.org/wiki/Computer_science
