--- a/components/rescheduler/configs/rescheduler_dev.yml
+++ b/components/rescheduler/configs/rescheduler_dev.yml
@@ -4,4 +4,6 @@ logging:
   logger_name: Rescheduler
 
 # In seconds
-rescheduling_interval: 3600 # 1 Hr
+rescheduling_tick: 600 # 10 mins
+
+db_reader_timeout_seconds: 10
