--- a/docker/environments/docker-compose.dev.yml
+++ b/docker/environments/docker-compose.dev.yml
@@ -26,3 +26,10 @@ services:
       service: dispatcher
     environment:
       - APP_ENV=dev
+
+  rescheduler:
+    extends:
+      file: ./docker-compose.yml
+      service: rescheduler
+    environment:
+      - APP_ENV=dev
