Parser: moved parsing only functions from utils.py to wiki_link_extractor

--- a/components/parser/configs/parser_base_config.yml
+++ b/components/parser/configs/parser_base_config.yml
@@ -1,3 +1,7 @@
+wikipedia:
+  domain: 'wikipedia.org'
+  base_url: 'https://en.wikipedia.org'
+
 # Specific Wikipedia boilerplate selectors
 selectors:
   title: '//title/text()'
