--- a/docker/monitoring/docker-compose.monitoring.yml
+++ b/docker/monitoring/docker-compose.monitoring.yml
@@ -1,7 +1,7 @@
 services:
   prometheus:
     build:
-      context: ./configs/prometheus
+      context: ./monitoring/configs/prometheus
       dockerfile: Dockerfile
     container_name: prometheus
     ports:
@@ -10,7 +10,7 @@ services:
 
   grafana:
     build:
-      context: ./configs/grafana
+      context: ./monitoring/configs/grafana
       dockerfile: Dockerfile
     container_name: grafana
     ports:
@@ -21,7 +21,7 @@ services:
 
   pgadmin:
     build:
-      context: ./configs/pgadmin
+      context: ./monitoring/configs/pgadmin
       dockerfile: Dockerfile
     container_name: pgadmin
     environment:
@@ -32,6 +32,33 @@ services:
       - "5050:80"
     volumes:
       - pgadmin-data:/var/lib/pgadmin
+    restart: unless-stopped
+
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter
+    ports:
+      - "9100:9100"
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - "--path.procfs=/host/proc"
+      - "--path.sysfs=/host/sys"
+      - "--path.rootfs=/rootfs"
+    restart: unless-stopped
+
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:latest
+    container_name: cadvisor
+    ports:
+      - "8080:8080"
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
     restart: unless-stopped
 
 volumes:
