git actions verifies that crawler proxie flag is set to false, else fails

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,30 @@ jobs:
           pip install ruff
           ruff check .
 
+      - uses: actions/checkout@v4
+      - name: Install yq
+        run: |
+          wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/v4.44.3/yq_linux_amd64
+          chmod +x /usr/local/bin/yq
+
+      - name: Verify proxy flag - dev
+        run: |
+          FILE="docker/environments/deploy_configs/scaling.dev.yml"
+          VALUE=$(yq '.components.crawler.use_proxies' "$FILE" || echo "null")
+          if [ "$VALUE" = "true" ]; then
+            echo "::error file=$FILE::use_proxies must be false in dev."
+            exit 1
+          fi
+      
+      - name: Verify proxy flag - prod
+        run: |
+          FILE="docker/environments/deploy_configs/scaling.prod.yml"
+          VALUE=$(yq '.components.crawler.use_proxies' "$FILE" || echo "null")
+          if [ "$VALUE" = "true" ]; then
+            echo "::error file=$FILE::use_proxies must be false in prod."
+            exit 1
+          fi
+
       - name: Generate .env file
         run: |
           echo "RABBITMQ_USER=${{ secrets.RABBITMQ_USER }}" >> .env
