--- a/docker/monitoring/configs/prometheus/prometheus.yml
+++ b/docker/monitoring/configs/prometheus/prometheus.yml
@@ -2,26 +2,6 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  # Dev 
-  - job_name: "dev-node-exporter"
-    static_configs:
-      - targets: ["192.168.86.15:9100"]
-        labels:
-          env: dev
-
-  - job_name: "dev-cadvisor"
-    static_configs:
-      - targets: ["192.168.86.15:8080"]
-        labels:
-          env: dev
-
-  - job_name: "dev-crawler-service"
-    static_configs:
-      - targets: ["192.168.86.15:8000"]
-        labels:
-          env: dev
-  
-  # Prod
   - job_name: "prod-node-exporter"
     static_configs:
       - targets: ["192.168.86.16:9100"]
@@ -33,12 +13,19 @@ scrape_configs:
       - targets: ["192.168.86.16:8080"]
         labels:
           env: prod
+  
+  - job_name: "crawlers"
+    dns_sd_configs:
+      - names: ["crawler"]   # the shared network alias
+        type: A
+        port: 8000
 
-  - job_name: "prod-crawler-service"
-    static_configs:
-      - targets: ["192.168.86.16:8000"]
-        labels:
-          env: prod
+  - job_name: 'parsers'
+    dns_sd_configs:
+      - names: ['parser']
+        type: A
+        port: 8000
+
 
   - job_name: 'prometheus'
     static_configs:
