--- a/docker/monitoring/configs/prometheus/prometheus.yml
+++ b/docker/monitoring/configs/prometheus/prometheus.yml
@@ -2,17 +2,13 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: "prod-node-exporter"
+  - job_name: "node-exporter"
     static_configs:
-      - targets: ["192.168.86.16:9100"]
-        labels:
-          env: prod
+      - targets: ["node-exporter:9100"]
 
-  - job_name: "prod-cadvisor"
+  - job_name: "cadvisor"
     static_configs:
-      - targets: ["192.168.86.16:8080"]
-        labels:
-          env: prod
+      - targets: ["cadvisor:8080"]
   
   - job_name: "crawlers"
     dns_sd_configs:
@@ -60,5 +56,3 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
-        labels:
-          env: prod
