--- a/docker/environments/deploy_configs/scaling.prod.yml
+++ b/docker/environments/deploy_configs/scaling.prod.yml
@@ -6,7 +6,7 @@ components:
     scaling: 1
 
   parser:
-    scaling: 3
+    scaling: 1
   
   scheduler:
     scaling: 1
@@ -18,10 +18,10 @@ components:
     scaling: 1
 
   crawler:
-    use_proxies: True
+    use_proxies: False
 
     crawler_noproxy:
-      scaling: 3
+      scaling: 1
 
     proxies:
       # California Proxies
