Cleaned up scripts/ and added arm64 binary for deploy.py

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,6 +14,6 @@ isort
 Pygments
 colorlog
 
-# Pytest-related internals (if not already installed as pytest deps)
+# Pytest-related internals
 iniconfig
 pluggy
