--- a/docker/environments/deploy_configs/scaling.dev.yml
+++ b/docker/environments/deploy_configs/scaling.dev.yml
@@ -18,7 +18,7 @@ components:
     scaling: 1
 
   crawler:
-    use_proxies: false
+    use_proxies: False
 
     crawler_noproxy:
       scaling: 3
